# binecommerce

./: LICENSE  README.md
bin-shopping-cart/: README.md  main.py  pyproject.toml
bin-shopping-cart/bin_shopping_cart/: cart.py  cart_csv.py  discount.py  item.py  product.py  product_csv.py  shopping_cart_service.py
bin-shopping-cart/data/: product.csv
bin-shopping-cart/data/carts/: 686aac54-55ef-49d4-97b6-939fcc7bb08e.csv
bin-shopping-cart/data/orders/: bf713ccd-94d3-49e3-8530-c134e193e678.csv
bin-shopping-cart/tests/: test_discount.py
