[tool.poetry]
name = "bin-shopping-cart"
version = "0.1.0"
description = ""
authors = ["Thanh Tan Pham <phamtan15991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
